--- a/pages/index.pug
+++ b/pages/index.pug
@@ -49,7 +49,7 @@ block content
                 svg(xmlns="http://www.w3.org/2000/svg", width="16", height="16", fill="currentColor", class="bi bi-file-earmark-person-fill", viewBox="0 0 16 16", style="margin-right: 12px;")
                     path(d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 5.755V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-.245S4 12 8 12s5 1.755 5 1.755z")
                 | CV
-            a(href="#", class="btn-link", data-bs-toggle="modal", data-bs-target="#modalContactMe")
+            a(href="#", id="btnOpenModal", class="btn-link", data-bs-toggle="modal", data-bs-target="#modalContactMe")
                 svg(xmlns="http://www.w3.org/2000/svg", width="16", height="16", fill="currentColor", class="bi bi-envelope-plus", viewBox="0 0 16 16", style="margin-right: 12px;")
                     path(d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z")
                     path(d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-3.5-2a.5.5 0 0 0-.5.5v1h-1a.5.5 0 0 0 0 1h1v1a.5.5 0 0 0 1 0v-1h1a.5.5 0 0 0 0-1h-1v-1a.5.5 0 0 0-.5-.5Z")
@@ -73,7 +73,7 @@ block content
                     div(class="swiper-slide")
                         img(src="/images/c.png", alt="C Language Logo")
                     div(class="swiper-slide")
-                        img(src="/images/c++.png", alt="C++ Language Logo")
+                        img(src="/images/cpp.png", alt="C++ Language Logo")
                     div(class="swiper-slide")
                         img(src="/images/c-sharp.png", alt="C# Language Logo")
                     div(class="swiper-slide")
@@ -151,11 +151,15 @@ block content
                             label(class="form-label", for="from") From
                             input(class="form-control", placeholder="Who are you?", id="from", name="from")
                         div(class="form-group mb-3")
+                            label(class="form-label", for="contact") Contact
+                            input(class="form-control", placeholder="Email or telephone number", id="contact", name="contact")
+                        div(class="form-group mb-3")
                             label(class="form-label", for="request") Request
                             input(class="form-control", id="request", placeholder="Request title", name="request")
                         div(class="form-group mb-3")
                             label(class="form-label", for="body") Message
                             textarea(class="form-control", id="body", name="body", rows="3", placeholder="Request message")
+                    div(class="d-none p-3 bg-success text-white", id="successMessage") Thanks! I will contact you as soon as possible!
                 div(class="modal-footer")
                     button(class="btn btn-secondary", data-bs-dismiss="modal") Close
                     button(class="btn btn-primary", id="submitFormContact") Submit
