--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -123,6 +123,7 @@ a.btn-link {
         flex-wrap: wrap;
 
         ul {
+            width: 100%;
             margin-top: 24px;
             list-style: none;
             list-style-position: inside;
@@ -141,6 +142,10 @@ a.btn-link {
                 &:first-of-type {
                     font-size: calc(1rem + 2px);
                 }
+            }
+
+            @media screen and (min-width: 300px) {
+                width: auto;
             }
         }
 
