--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,330 +1,83 @@
-@import './resets';
-@import './variables';
-@import './breakpoints';
+@import "./resets";
+@import "./variables";
+@import "./breakpoints";
+@import "./typography";
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:ital,wght@1,500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:ital,wght@1,500&display=swap");
 
-html, body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+html,
+body {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  color: white;
 }
 
-section {
-    padding: 24px 0px;
-}
+main {
+  height: 100%;
+  background-color: $primary;
+  overflow: hidden;
 
-.links {
-    gap: 24px;
-}
-
-ol, ul {
-    padding: 0;
-
-    @include sm {
-        padding-left: 2rem;
-    }
+  .container {
+    background-color: $primary;
+  }
 }
 
 .swiper-container {
-    height: calc(100vh - 120px);
-    margin: 60px;
+  height: calc(100vh - 120px);
+  margin: 60px;
 }
 
 .swiper-slide {
-    width: 28vw;
-    overflow: hidden;
-    background-position: top;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
+  width: 28vw;
+  overflow: hidden;
+  background-position: top;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .swiper-wrapper {
-    -webkit-transition-timing-function:linear!important; 
-    -o-transition-timing-function:linear!important;
-    transition-timing-function:linear!important; 
+  -webkit-transition-timing-function: linear !important;
+  -o-transition-timing-function: linear !important;
+  transition-timing-function: linear !important;
 }
 
-.section-title {
-    position: relative;
-    border-bottom: 2px solid #eeeeee;
-    padding-bottom: 6px;
+.show-myinfo {
+  @media screen and (max-width: 576px) {
+    overflow: visible;
+
+    .slide {
+      display: none;
+    }
+
+    .slide.active, .slide.visited {
+      display: flex;
+    }
+
+    .slide.myself.active {
+      padding-top: 32px;
+      padding-bottom: 32px;
+      justify-content: unset;
+    }
+  }
 }
 
-.show-hidden {
-    &:hover {
-        cursor: pointer;
-    }
-
-    &::after {
-        display: block;
-        width: 24px;
-        height: 24px;
-        content: "";
-        position: absolute;
-        right: 0;
-        top: 0;
-        background-image: url(/images/next.png);
-    }
-
-    + .hidden-content {
-        display: none;
-    }
+::-moz-selection {
+  background: darkblue;
 }
 
-.rotate::after {
-    transition: all 250ms ease;
-    transform: rotate(90deg);
+::selection {
+  background: darkblue;
 }
 
-.normal-position::after {
-    transition: all 250ms ease;
-    transform: rotate(0deg);
-}
-
-a.btn-link {
-    display: block;
-    background-color: white;
-    border: none;
-    border-radius: 8px;
-    color: $mainColor;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 10px 16px;
-    text-align: center;
-    transition: all 250ms ease;
-    border: 1px solid blue;
-
-    &:hover {
-        cursor: pointer;
-        box-shadow: 3px 3px 8px violet;
-    }
-}
-
-.whoami {
-    margin-top: 24px;
-
-    #{&}__description {
-        margin-top: 24px;
-        line-height: 1.2rem;
-        text-align: justify;
-    }
-
-    #{&}__info {
-        display: flex;
-        flex-wrap: wrap;
-
-        ul {
-            width: 100%;
-            margin-top: 24px;
-            list-style: none;
-            list-style-position: inside;
-
-            li {
-                padding: 4px 0px;
-
-                a {
-                    transition: all 256ms ease;
-
-                    &:hover {
-                        opacity: .5;
-                    }
-                }
-
-                @include sm {
-                    padding: 6px 0px;
-                }
-
-                @include xxl {
-                    padding: 8px 0px;
-                }
-
-                &:first-of-type {
-                    font-size: calc(1rem + 2px);
-                }
-            }
-
-            @media screen and (min-width: 300px) {
-                width: auto;
-            }
-        }
-
-        .photo {
-            margin: 0 auto;
-            max-width: 100%;
-
-            img {
-                width: 100%;
-            }
-
-            @include md {
-                max-width: 50%;
-                margin: 0;
-            }
-        }
-
-        @include sm {
-            justify-content: center;
-        }
-
-        @include xxl {
-            justify-content: space-around;
-        }
-    }
-
-    @include md {
-        margin-top: 50px;
-    }
-}
-
-.socials {
-    a {
-        text-decoration: none;
-        color: white;
-    }
-}
-
-.hero {
-    min-height: 100vh;
-    color: white;
-    background-color: $mainColor;
-    padding: 120px 8px;
-
-    @include xxl {
-        padding: 250px 8px;
-    }
-
-    #{&}__title {
-        font-size: clamp(28px, 46px, 64px);
-        text-align: center;
-        font-weight: 800;
-        text-transform: uppercase;
-
-        @include md {
-            max-width: 70%;
-            margin: 0 auto;
-        }
-    }
-
-    #{&}__subtitle {
-        margin-top: 16px;
-        font-weight: 300;
-        font-size: 26px;
-        text-align: center;
-        text-transform: uppercase;
-    }
-}
-
-.skills {
-
-    #{&}__title {
-        font-weight: 500;
-        font-size: 25px;
-    }
-
-    .swiper {
-        .swiper-wrapper {
-            .swiper-slide {
-                display: flex;
-                justify-content: center;
-            }
-        }
-    }
-
-    .swiper {
-        margin-top: 24px;
-    }
-}
-
-.projects {
-    #{&}__title {
-        font-weight: 500;
-        font-size: 25px;
-    }
-
-    .project {
-        margin-top: 24px;
-        padding: 0px 16px;
-
-        p {
-            margin: inherit;
-            text-align: justify;
-        }
-
-        .project__title {
-            display: flex;
-            padding-bottom: 6px;
-            border-bottom: 1px solid #eeeeee;
-            flex-wrap: wrap;
-            margin-bottom: 12px;
-
-            a {
-                text-decoration: none;
-                img {
-                    width: 16px;
-                    height: 16px;
-
-                    @include xxl {
-                        width: 24px;
-                        height: 24px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.passions {
-    #{&}__title {
-        font-weight: 500;
-        font-size: 25px;
-    }
-
-    .passion {
-        margin-top: 24px;
-        padding: 0px 16px;
-
-        .passion__title {
-            padding-bottom: 6px;
-            border-bottom: 1px solid #eeeeee;
-            margin-bottom: 12px;
-        }
-
-        p {
-            text-align: justify;
-        }
-    }
-}
-
-.footer {
-    padding: 64px 0px;
-}
-
-.cit {
-    border-left: 4px solid #1565c0;
-    margin-top: 8px;
-    padding: 8px !important;
-    background-color: $citBackgroundColor;
-
-    p {
-        margin: 2px;
-    }
-
-    * {
-        font-family: 'Playfair Display', sans-serif;
-        background-color: $citBackgroundColor;
-    }
-
-    .author {
-        text-align: right;
-        font-weight: bolder;
-    }
-}
+@import "./components/slide";
+@import "./components/pulsate";
+@import "./components/ltr";
+@import "./components/cit";
