Revert "generic fix"
This reverts commit 3d3bc4cce5e2e0df5be0ffc5a7eb06251cad6552.

--- a/assets/sass/components/_slide.scss
+++ b/assets/sass/components/_slide.scss
@@ -96,15 +96,18 @@ $array: (1, 2, 3);
       .img {
         background-color: $primary;
         display: flex;
-        align-items: center;
         justify-content: center;
 
         img {
           max-width: 200px;
 
           @include lg() {
-            max-width: 300px;
+            max-width: unset;
           }
+        }
+
+        @include lg() {
+          display: block;
         }
       }
     }
