--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -13,7 +13,6 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
   color: white;
-  background-color: $primary;
 }
 
 main {
@@ -51,23 +50,9 @@ main {
 }
 
 .show-myinfo {
-  overflow-y: auto;
-
-  @include lg() {
-    .slide.myself {
-      margin-top: 5%;
-      margin-bottom: 50px;
-      height: unset;
-    }
-  }
-
-  @include xxl() {
-    .slide.myself {
-      margin: 0;
-    }
-  }
-
   @media screen and (max-width: 576px) {
+    overflow: visible;
+
     .slide {
       display: none;
     }
