--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -60,6 +60,10 @@ main {
     }
   }
 
+  @include xl() {
+    overflow-y: hidden;
+  }
+
   @include xxl() {
     .slide.myself {
       margin: 0;
