--- a/pages/layout/base.pug
+++ b/pages/layout/base.pug
@@ -4,9 +4,10 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(href="/favicon.ico", type="image/x-icon", rel="icon")
-        link(href="/css/style.css", rel="stylesheet")
+        block seo
         block title
         block styles
+        link(href="/css/style.css", rel="stylesheet")
     body
         header
             block header
